syntax = "proto3";

//this file is generated by gsync, do not modify it manually !!!
option go_package = "../pbgen";


message ActionInfo{
  optional string act = 1;
  optional string detail = 2;
  optional int64 time = 3;
}
