syntax = "proto3";

//this file is generated by gsync, do not modify it manually !!!
option go_package = "../pbgen";


message IntroDetail{
  optional string address = 1;
  optional int32 money = 2;
}
