syntax = "proto3";

//this file is generated by gsync, do not modify it manually !!!
option go_package = "../pbgen";

import "ColorType.proto";
import "IntroDetail.proto";
import "VipLevel.proto";
import "ActionInfo.proto";

message Person{
  optional int32 age = 1;
  optional VipLevel vipLevel = 2;
  optional string name = 3;
  repeated ActionInfo actions = 4;
  repeated string actionsDeleted = 1004;
  repeated string favor = 5;
  bool favorCleared = 2005;
  repeated ColorType loveSeq = 6;
  bool loveSeqCleared = 2006;
  optional bool isGirl = 7;
  optional IntroDetail detail = 8;
  optional bytes data = 9;
}
