syntax = "proto3";

//this file is generated by gsync, do not modify it manually !!!
option go_package = "../pbgenv1";

enum ColorType{ //
  Red = 0; // 
  Blue = 1; // 
  Green = 2; // 
}
